upload application.properties, product